k8s/kube-base/deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb:10.3.34
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: vol-mariadb
              mountPath: /var/lib/mysql
            - name: vol-my-conf
              mountPath: /etc/mysql/my.cnf
              subPath: my.cnf
            - name: vol-mariadb-conf
              mountPath: /etc/mysql/mariadb.cnf
              subPath: mariadb.cnf
            - name: vol-mysql-safe-conf
              mountPath: /etc/mysql/conf.d/mysqld_safe_syslog.cnf
              subPath: mysqld_safe_syslog.cnf
      volumes:
        - name: vol-mariadb
          persistentVolumeClaim:
            claimName: pvc-mariadb
        - name: vol-my-conf
          configMap:
            name: cm-my-conf
            items:
              - key: etc-mysql-my.cnf
                path: my.cnf
        - name: vol-mariadb-conf
          configMap:
            name: cm-mariadb-conf
            items:
              - key: etc-mysql-mariadb.cnf
                path: mariadb.cnf
        - name: vol-mysql-safe-conf
          configMap:
            name: cm-mysql-safe-conf
            items:
              - key: etc-mysql-conf.d-mysqld_safe_syslog.cnf
                path: mysqld_safe_syslog.cnf
