k8s/kube-base/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: mongo
  labels:
    component: mongo
spec:
  selector:
    matchLabels:
      component: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: mongo
    spec:
      containers:
        - image: mongo:6.0.5
          name: mongo
          args: ["--dbpath","/data/db"]
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: vol-mongo
              mountPath: /data/db
      volumes:
        - name: vol-mongo
          persistentVolumeClaim:
            claimName: pvc-mongo
