k8s/kube-base/deployment-xdmod-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moc-xdmod
spec:
  selector:
    matchLabels:
      app: xdmod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xdmod
    spec:
      containers:
        - image: docker.io/robertbartlettbaron/moc-xdmod
          name: xdmod-setup
          imagePullPolicy: Never
          command:
            - "sleep"
          args:
            - "10000"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: vol-xdmod-conf
              mountPath: /etc/xdmod
            - name: vol-xdmod-src
              mountPath: /usr/share/xdmod
            - name: vol-xdmod-data
              mountPath: /root/xdmod_data
            - name: vol-nerc-shift-0-cred
              readOnly: true
              mountPath: "/root/resources/nerc_shift_0/"
      volumes:
        - name: vol-xdmod-conf
          persistentVolumeClaim:
            claimName: pvc-xdmod-conf
        - name: vol-xdmod-src
          persistentVolumeClaim:
            claimName: pvc-xdmod-src
        - name: vol-xdmod-data
          persistentVolumeClaim:
            claimName: pvc-xdmod-data
        - name: vol-xdmod-init
          configMap:
            items:
              - key: xdmod_init.json
                path: xdmod_init.json
            name: cm-xdmod-init-json
        - name: vol-nerc-shift-0-cred
          secret:
            secretName: xdmod-os-app-cred
