k8s/kube-base/deployment-xdmod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xdmod-ui
  labels:
    component: xdmod-ui
spec:
  selector:
    matchLabels:
      component: xdmod-ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: xdmod-ui
    spec:
      containers:
        - image: moc-xdmod:latest
          name: xdmod
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: vol-xdmod-conf
              mountPath: /etc/xdmod
            - name: vol-xdmod-src
              mountPath: /usr/share/xdmod
            - name: vol-xdmod-data
              mountPath: /data
            - name: vol-httpd-conf
              mountPath: /etc/httpd
            - name: vol-clouds-yaml
              mountPath: /etc/openstack
            - name: vol-httpd-conf
              mountPath: /root/httpd
            - name: vol-var-log-xdmod
              mountPath: /var/log/xdmod
            - name: vol-var-log-httpd
              mountPath: /var/log/httpd
            - name: vol-run-httpd
              mountPath: /run/httpd
            - name: vol-php-session
              mountPath: /var/lib/php/session
        - image: moc-xdmod:latest
          name: xdmod-acl-work-a-round
          imagePullPolicy: IfNotPresent
          command:
            - /bin/bash
            - -c
            - |
              while true; do
                /usr/bin/acl-config
                sleep 420
              done
          volumeMounts:
            - name: vol-xdmod-conf
              mountPath: /etc/xdmod
            - name: vol-xdmod-src
              mountPath: /usr/share/xdmod
            - name: vol-xdmod-data
              mountPath: /data
            - name: vol-httpd-conf
              mountPath: /etc/httpd
            - name: vol-clouds-yaml
              mountPath: /etc/openstack
            - name: vol-httpd-conf
              mountPath: /root/httpd
            - name: vol-var-log-xdmod
              mountPath: /var/log/xdmod
            - name: vol-var-log-httpd
              mountPath: /var/log/httpd
            - name: vol-run-httpd
              mountPath: /run/httpd
            - name: vol-php-session
              mountPath: /var/lib/php/session
      volumes:
        - name: vol-xdmod-conf
          persistentVolumeClaim:
            claimName: pvc-xdmod-conf
        - name: vol-clouds-yaml
          persistentVolumeClaim:
            claimName: pvc-clouds-yaml
        - name: vol-httpd-conf
          persistentVolumeClaim:
            claimName: pvc-httpd-conf
        - name: vol-xdmod-src
          persistentVolumeClaim:
            claimName: pvc-xdmod-src
        - name: vol-xdmod-data
          persistentVolumeClaim:
            claimName: pvc-xdmod-data
        - name: vol-var-log-xdmod
          emptyDir: {}
        - name: vol-var-log-httpd
          emptyDir: {}
        - name: vol-run-httpd
          emptyDir: {}
        - name: vol-php-session
          emptyDir: {}
        - name: vol-xdmod-init
          configMap:
            items:
              - key: xdmod_init.json
                path: xdmod_init.json
            name: cm-xdmod-init-json
        - name: vol-httpd-cm
          configMap:
            items:
              - key: httpd.conf
                path: httpd.conf
            name: cm-httpd-conf
