k8s/kube-base/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: xdmod
      labels:
        app: mariadb
    spec:
      containers:
        - image: mariadb:10.3.34
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          volumeMounts:
            - name: mariadb-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
