k8s/kube-base/xdmod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moc-xdmod
spec:
  selector:
    matchLabels:
      app: xdmod
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: xdmod
      labels:
        app: xdmod
    spec:
      containers:
        - image: moc-xdmod
          name: xdmod
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: xdmod-conf-vol
              mountPath: /etc/xdmod
            - name: xdmod-src-vol
              mountPath: /usr/share/xdmod
      volumes:
        - name: xdmod-conf-vol
          persistentVolumeClaim:
            claimName: xdmod-conf-pvc
        - name: xdmod-src-vol
          persistentVolumeClaim:
            claimName: xdmod-src-pvc
        - name: cloud-config-vol
          configMap:
            defaultMode: 420
            items:
              - key: clouds.yaml
                path: clouds.yaml
            name: cloud-config-configmap
