k8s/kube-base/svc-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    component: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
