k8s/kube-base/svc-xdmod.yaml
apiVersion: v1
kind: Service
metadata:
  name: xdmod
spec:
  selector:
    component: xdmod-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
