k8s/kube-base/xdmod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xdmod
  namespace: xdmod
spec:
  selector:
    app: xdmod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
